--- a/task-service.properties
+++ b/task-service.properties
@@ -1,7 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/easyservicedb
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/easyservicedb
+
+# dialect to inform hibernate which database is used
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.database-platform=org.hibernate.dialect.MySQL5Dialect  
-spring.jpa.hibernate.show-sql=true
-message=welcome Task-Service
